--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -7909,6 +7909,12 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
                                 Austria
                               </a>
                             </li>
+                            <li data-region="AU">
+                              <a href="#" tabindex="-1" class="flag au"
+                                 data-i18n="settings#egress-region#select-au">
+                                Australia
+                              </a>
+                            </li>
                             <li data-region="BE">
                               <a href="#" tabindex="-1" class="flag be"
                                  data-i18n="settings#egress-region#select-be">
@@ -8535,14 +8541,26 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
 
             <div class="checkbox-container">
               <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-US" value="US">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-US">US</label>
+                <input type="checkbox" id="debug-AvailableEgressRegions-AT" value="AT">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-AT">AT</label>
               </div>
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-GB" value="GB">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-GB">UK</label>
+                <input type="checkbox" id="debug-AvailableEgressRegions-AU" value="AU">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-AU">AU</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-BE" value="BE">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-BE">BE</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-BG" value="BG">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-BG">BG</label>
               </div>
             </div>
             <div class="checkbox-container">
@@ -8553,20 +8571,14 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-JP" value="JP">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-JP">JP</label>
+                <input type="checkbox" id="debug-AvailableEgressRegions-CH" value="CH">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-CH">CH</label>
               </div>
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-SG" value="SG">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-SG">SG</label>
-              </div>
-            </div>
-            <div class="checkbox-container">
-              <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-NL" value="NL">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-NL">NL</label>
+                <input type="checkbox" id="debug-AvailableEgressRegions-CZ" value="CZ">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-CZ">CZ</label>
               </div>
             </div>
             <div class="checkbox-container">
@@ -8577,14 +8589,110 @@ this._delay(function(){n===this.counter&&this.refreshPositions(!s)})},_clear:fun
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
-                <input type="checkbox" id="debug-AvailableEgressRegions-IN" value="IN">
-                <label class="checkbox inline" for="debug-AvailableEgressRegions-IN">IN</label>
+                <input type="checkbox" id="debug-AvailableEgressRegions-DK" value="DK">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-DK">DK</label>
               </div>
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-ES" value="ES">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-ES">ES</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-FR" value="FR">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-FR">FR</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-GB" value="GB">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-GB">UK</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-HK" value="HK">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-HK">HK</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-HU" value="HU">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-HU">HU</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-IN" value="IN">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-IN">IN</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-IT" value="IT">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-IT">IT</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-JP" value="JP">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-JP">JP</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-NL" value="NL">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-NL">NL</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-NO" value="NO">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-NO">NO</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-PL" value="PL">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-PL">PL</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-RO" value="RO">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-RO">RO</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-RS" value="RS">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-RS">RS</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-SE" value="SE">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-SE">SE</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-SG" value="SG">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-SG">SG</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-SK" value="SK">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-SK">SK</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-US" value="US">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-US">US</label>
               </div>
             </div>
             <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
@@ -26657,6 +26765,7 @@ Datastore.prototype = {
       "settings#egress-region#invalid-error-msg": "[Ƈħǿǿǿǿşḗḗ ȧȧ ṽȧȧŀīīḓ Ƥşīīƥħǿǿƞ şḗḗřṽḗḗř řḗḗɠīīǿǿƞ.]",
       "settings#egress-region#label": "[Ƈǿǿƞƞḗḗƈŧ ṽīīȧȧ]",
       "settings#egress-region#select-at": "[Ȧȧŭŭşŧřīīȧȧ]",
+      "settings#egress-region#select-au": "[Ȧȧŭŭşŧřȧȧŀīīȧȧ]",
       "settings#egress-region#select-be": "[Ɓḗḗŀɠīīŭŭḿ]",
       "settings#egress-region#select-best-performance": "[Ƒȧȧşŧḗḗşŧ Ƈǿǿŭŭƞŧřẏ]",
       "settings#egress-region#select-bg": "[Ɓŭŭŀɠȧȧřīīȧȧ]",
@@ -26830,6 +26939,7 @@ Datastore.prototype = {
       "settings#egress-region#invalid-error-msg": "‮Ↄɥoosǝ‬ ‮ɐ‬ ‮ʌɐʅıp‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ɹǝƃıou‬.",
       "settings#egress-region#label": "‮Ↄouuǝɔʇ‬ ‮ʌıɐ‬",
       "settings#egress-region#select-at": "‮∀nsʇɹıɐ‬",
+      "settings#egress-region#select-au": "‮∀nsʇɹɐʅıɐ‬",
       "settings#egress-region#select-be": "‮Ԑǝʅƃınɯ‬",
       "settings#egress-region#select-best-performance": "‮ɟɐsʇǝsʇ‬ ‮Ↄonuʇɹʎ‬",
       "settings#egress-region#select-bg": "‮Ԑnʅƃɐɹıɐ‬",
@@ -27146,6 +27256,7 @@ Datastore.prototype = {
       "settings#egress-region#select-se": "Sweden",
       "settings#egress-region#select-pl": "Poland",
       "settings#egress-region#select-rs": "Serbia",
+      "settings#egress-region#select-au": "Australia",
       "settings#egress-region#description": "Psiphon has servers in many different countries. Using a Psiphon server in a country close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country.",
       "settings#egress-region#default": "Choosing the default <strong>“Fastest Country”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
       "settings#egress-region#invalid-error-msg": "Choose a valid Psiphon server region.",
