--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -27567,12 +27567,12 @@ Datastore.prototype = {
       "settings#vpn-incompatible-msg": "(با حالت L2TP / IPSec  کار نمی کند.)",
       "settings#vpn-incompatible-label": "L2TP / IPSec",
       "settings#split-tunnel#heading": "تقسیم تونل",
-      "settings#split-tunnel#help-text": "If enabled, requests made to servers within your home country will not be tunneled through Psiphon.",
-      "settings#split-tunnel#reason": "Websites within your home country are generally not blocked, so enabling this option will give you faster access to those sites and can sometimes reduce ISP data usage costs.",
+      "settings#split-tunnel#help-text": "اگر این گزینه فعال شود، درخواست هایی که به سرورهای درون کشور شما فرستاده می‌شوند از تونل Psiphon (سایفون) عبور داده نخواهند شد.",
+      "settings#split-tunnel#reason": "وبسایت های درون کشور خودتان معمولا مسدود نیستند. بنابراین فعال کردن این گزینه دسترسی به این سایت ها را سریع‌تر می کند و گاهی می تواند هزینه‌ی مصرف داده های سرویس اینترنت شما را کاهش دهد.",
       "settings#split-tunnel#enable-label": "وبسایت های داخل کشور من را پراکسی نکن. ",
       "settings#disable-timeouts#heading": "غیر فعال کردن زمان انتظار برای شبکه‌های کم سرعت",
       "settings#disable-timeouts#help-text": "در صورت فعال بودن، اتصال شما به سرور سایفون قطع نخواهد شد",
-      "settings#disable-timeouts#reason": "When enabling this for a very slow network connection, you are less likely to experience unexpected disconnections.",
+      "settings#disable-timeouts#reason": "وقتی این گزینه برای یک شبکه‌ی بسیار کند فعال شود، احتمال قطع پیش‌بینی نشده‌ی اتصال شما کمتر می‌شود.",
       "settings#disable-timeouts#enable-label": "غیر فعال کردن وقفه برای شبکه‌های کم سرعت",
       "settings#egress-region#heading": "کشور سرور خروجی سایفون ",
       "settings#egress-region#label": "اتصال از طریق",
@@ -27602,7 +27602,7 @@ Datastore.prototype = {
       "settings#egress-region#select-se": "سوئد",
       "settings#egress-region#select-pl": "لهستان",
       "settings#egress-region#select-rs": "صربستان",
-      "settings#egress-region#description": "Psiphon has servers in many different countries. Using a Psiphon server in a country close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country.",
+      "settings#egress-region#description": "Psiphon (سایفون) در بسیاری از کشورها سرور دارد. معمولا استفاده از یک سرور Psiphon (سایفون) که به کشور شما نزدیک‌تر است اتصال بهتری به شبکه فراهم می کند، اما شاید شما بخواهید به وبسایت‌ها و خدمات طوری دسترسی داشته باشید که انگار که در کشور خاصی هستید.",
       "settings#egress-region#default": "انتخاب گزینه <strong>“سریع ترین کشور”</strong> به سایفون اجازه می دهد که به صورت خودکار یک سرور را انتخاب کند که عموما نتیجه آن یک ارتباط بهتر و پایدارتر است. ",
       "settings#egress-region#invalid-error-msg": "یک منطقه سرور معتبر سایفون را انتخاب کنید.",
       "settings#egress-region#error-modal-title": "سرور منطقه در دسترس نیست",
@@ -27679,33 +27679,33 @@ Datastore.prototype = {
       "appbackend#state-connected-reminder-body-2": "سایفون را رایگان نگه دارید با بازدید از صفحه حامیان ما!",
       "appbackend#minimized-to-systray-title": "سایفون مینیمایز شد و به نوار اعلان رفت",
       "appbackend#minimized-to-systray-body": "کلیک بر روی آیکون برای بازگرداندن نرم افزار",
-      "psicash#transaction-error-title": "PsiCash transaction error",
-      "psicash#transaction-error-body": "Your PsiCash transaction attempt failed unexpectedly.",
-      "psicash#transaction-ExistingTransaction-title": "PsiCash purchase already exists",
-      "psicash#transaction-ExistingTransaction-body": "You have an existing PsiCash purchase of this type. Another purchase of this type is not allowed until the previous one expires. Your PsiCash state will be refreshed now.",
-      "psicash#transaction-InsufficientBalance-title": "Insufficient PsiCash balance",
-      "psicash#transaction-InsufficientBalance-body": "You do not have sufficient PsiCash balance for this purchase.",
-      "psicash#transaction-TransactionAmountMismatch-title": "PsiCash purchase price mismatch",
-      "psicash#transaction-TransactionAmountMismatch-body": "PsiCash purchase prices are out-of-date. Your PsiCash state will be refreshed now.",
-      "psicash#transaction-TransactionTypeNotFound-title": "PsiCash purchase type not found",
-      "psicash#transaction-TransactionTypeNotFound-body": "The product you are trying to buy no longer exists. You may need to update or reinstall the application.",
-      "psicash#transaction-InvalidTokens-title": "Invalid PsiCash tokens",
-      "psicash#transaction-InvalidTokens-body": "Your PsiCash tokens are invalid. Try restarting the application. If that doesn't work, you will need to <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">clear your local storage</a>.",
-      "psicash#transaction-ServerError-title": "PsiCash server error",
-      "psicash#transaction-ServerError-body": "The PsiCash server responded with an error while trying to make the purchase. Please retry your purchase later.",
-      "psicash#ui-speedboost-active": "Speed&nbsp;Boost active for %s",
-      "psicash#ui-zerobalance-title": "Need a Speed&nbsp;Boost?",
-      "psicash#ui-buypsi": "Buy PsiCash",
-      "psicash#ui-buymorepsi": "Buy more PsiCash",
-      "psicash#ui-nsfbalance-buttontext": "Needed for Speed&nbsp;Boost",
-      "psicash#ui-enoughbalance-buttontext": "Start Speed&nbsp;Boost",
-      "psicash#ui-buyingboost-buttontext": "Starting Speed&nbsp;Boost!",
+      "psicash#transaction-error-title": "خطا در مبادله با PsiCash",
+      "psicash#transaction-error-body": "تلاش شما برای مبادله با PsiCash با مشکل ناگهانی روبرو شد.",
+      "psicash#transaction-ExistingTransaction-title": "خرید PsiCash از پیش وجود دارد. ",
+      "psicash#transaction-ExistingTransaction-body": "شما یک خرید PsiCash موجود از این نوع دارید. خریدهای دیگر از این نوع تا زمان انقضا قبلی مجاز نیست. اکنون وضعیت PsiCash شما تازه‌سازی خواهد شد.",
+      "psicash#transaction-InsufficientBalance-title": "موجودی PsiCash ناکافی است",
+      "psicash#transaction-InsufficientBalance-body": "شما PsiCash کافی برای این خرید ندارید.",
+      "psicash#transaction-TransactionAmountMismatch-title": "عدم تطابق قیمت خرید PsiCash",
+      "psicash#transaction-TransactionAmountMismatch-body": "قیمت‌های خرید PsiCash قدیمی هستند. اکنون وضعیت PsiCash شما تازه‌سازی خواهد شد.",
+      "psicash#transaction-TransactionTypeNotFound-title": "نوع خرید PsiCash یافت نشد",
+      "psicash#transaction-TransactionTypeNotFound-body": "چیزی که می‌خواهید بخرید دیگر وجود ندارد. شما باید برنامه‌ی خود را به روز رسانی یا دوباره نصب کنید.",
+      "psicash#transaction-InvalidTokens-title": "مشخصه نامعتبر PsiCash",
+      "psicash#transaction-InvalidTokens-body": "مشخصه PsiCash شما نامعتبر است. برنامه را دوباره راه‌اندازی کنید. اگر اثری نداشت، باید <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">فضای ذخیره محلی خود را پاک کنید</a>.",
+      "psicash#transaction-ServerError-title": "خطای سرور PsiCash",
+      "psicash#transaction-ServerError-body": "سرور PsiCash هنگام تلاش برای خرید با خطا مواجه شد. لطفا بعدا خرید خود را دوباره امتحان کنید.",
+      "psicash#ui-speedboost-active": "افزایش سرعت برای %s فعال است",
+      "psicash#ui-zerobalance-title": "نیاز به افزایش سرعت دارید؟",
+      "psicash#ui-buypsi": " خرید PsiCash",
+      "psicash#ui-buymorepsi": "PsiCash بیشتری بخرید.",
+      "psicash#ui-nsfbalance-buttontext": "مورد نیاز برای افزایش سرعت",
+      "psicash#ui-enoughbalance-buttontext": "شروع افزایش سرعت",
+      "psicash#ui-buyingboost-buttontext": "در حال افزایش سرعت!",
       "positive-value-indicator": "+%d",
       "psicash#mustconnect-modal#title": "اتصال Psiphon الزامیست",
-      "psicash#mustconnect-modal#body": "In order to use PsiCash, you must be connected to the Psiphon network.",
-      "psicash#init-error-title": "PsiCash initialization error",
-      "psicash#init-error-body-unrecovered": "PsiCash failed to initialize. This is probably due to a file system problem, such as being out of disk space. Your balance and other state have been lost. PsiCash will not be usable. You can try restarting the application to recover from the problem.",
-      "psicash#init-error-body-recovered": "PsiCash failed to initialize. This is probably due to a file system problem, such as being out of disk space. Your balance and other state have been reset.",
+      "psicash#mustconnect-modal#body": "برای استفاده از PsiCash، باید به شبکه سایفون متصل شوید.",
+      "psicash#init-error-title": "خطای آماده‌سازی اولیه PsiCash\n",
+      "psicash#init-error-body-unrecovered": "PsiCash در آماده‌سازی اولیه ناموفق بود. این احتمالا به دلیل مشکل سیستم فایل‌ها، مانند پر بودن فضای دیسک است. موجودی و وضعیت شما از دست رفته است. PsiCash قابل استفاده نخواهد بود. برای رهایی از این مشکل می‌توانید دوباره برنامه را راه‌اندازی کنید.",
+      "psicash#init-error-body-recovered": "PsiCash در آماده‌سازی اولیه ناموفق بود. این احتمالا به دلیل مشکل سیستم فایل‌ها، مانند پر بودن فضای دیسک است. موجودی و وضعیت شما بازنشانی (reset) شده است.",
       "banner#sponsored-by": "اسپانسر شده با  "
     }
   },
@@ -32445,7 +32445,7 @@ Datastore.prototype = {
       "settings#egress-region#select-ro": "罗马尼亚",
       "settings#egress-region#select-se": "瑞典",
       "settings#egress-region#select-pl": "波兰",
-      "settings#egress-region#select-rs": "Serbia",
+      "settings#egress-region#select-rs": "塞尔维亚",
       "settings#egress-region#description": "赛风在很多国家拥有服务器。使用一距离您所在国家更近的赛风服务器会使您的网络连接更好，但是您也可以选择身临其境一般的访问网站及服务。",
       "settings#egress-region#default": "选择默认的<strong>“最快的国家”</strong>选项以允许赛风自动选择服务器，通常能得到最佳的网络连接质量。",
       "settings#egress-region#invalid-error-msg": "请选择一个有效的赛风服务器区域。",
