Prevent upgrade on XP/Vista; flag version

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1208,6 +1208,7 @@
               Psiphon for Windows client version:
             </span>
             <span class="ClientVersion"></span>
+            LEGACY
           </p>
         </div><!-- /about-pane -->
 
