Fix Psiphon-Inc/psiphon-issues#660: PsiCash UI would not always initialize properly
The problem was that sometimes a PsiCash refresh-state was being
attempted before the library was initialized, resulting in the state
appearing reset.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -34620,6 +34620,7 @@ Datastore.prototype = {
   /** @type {Datastore} */
 
   var PsiCashStore = new Datastore({
+    initDone: false,
     purchaseInProgress: false
   }, 'PsiCashStore');
   $(function psicashInit() {
@@ -34627,20 +34628,36 @@ Datastore.prototype = {
     // connected, it just gets locally cached values.
     // And update the UI values every time the app gets focus.
     addWindowFocusHandler(function () {
+      if (!PsiCashStore.data.initDone) {
+        return;
+      }
+
       HtmlCtrlInterface_PsiCashCommand(new PsiCashCommandRefresh('app-focus'));
     }); // And update the UI values every time we get connected.
 
     $window.on(CONNECTED_STATE_CHANGE_EVENT, function () {
+      if (!PsiCashStore.data.initDone) {
+        return;
+      }
+
       HtmlCtrlInterface_PsiCashCommand(new PsiCashCommandRefresh('connected-state-change'));
     }); // And update the UI values every time the display language changes, so that the numbers
     // are correctly formatted.
 
     $window.on(LANGUAGE_CHANGE_EVENT, function () {
+      if (!PsiCashStore.data.initDone) {
+        return;
+      }
+
       HtmlCtrlInterface_PsiCashCommand(new PsiCashCommandRefresh('ui-language-change'));
     }); // And update the UI when the settings change. If we go into/out of VPN mode we need to
     // disable the UI and indicate why.
 
     $('#settings-pane').on(SETTING_CHANGED_EVENT, function () {
+      if (!PsiCashStore.data.initDone) {
+        return;
+      }
+
       HtmlCtrlInterface_PsiCashCommand(new PsiCashCommandRefresh('settings-changed'));
     });
   });
@@ -34661,6 +34678,7 @@ Datastore.prototype = {
       }
     }
 
+    PsiCashStore.set('initDone', true);
     HtmlCtrlInterface_PsiCashCommand(new PsiCashCommandRefresh('init-done'));
   }
 
