--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -186,6 +186,19 @@
 
             <div id="psicash-interface-zerobalance" class="psicash-interface hidden">
               <div class="psicash-title-balance" data-i18n="[html]psicash#ui-zerobalance-title">Need a Speed&nbsp;Boost?</div>
+
+              <div class="speed-limit text-center">
+                <span class="badge speed-slow">
+                  <table>
+                    <tr>
+                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
+                      <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
+                      <td><span><img src="turtle.png"></span></td>
+                    </tr>
+                  </table>
+                </span>
+              </div>
+
               <div class="button-container">
                 <a class="psicash-buy-psi btn btn-primary" href="#">
                   <span data-i18n="psicash#ui-buypsi">Buy PsiCash</span> <img class="coin" src="psicash_coin.png">
@@ -199,6 +212,18 @@
                 <span class="psicash-balance-coin">
                   <img class="coin" src="psicash_coin.png">
                   <span class="psicash-balance"></span>
+                </span>
+              </div>
+
+              <div class="speed-limit text-center">
+                <span class="badge speed-slow">
+                  <table>
+                    <tr>
+                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
+                      <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
+                      <td><span><img src="turtle.png"></span></td>
+                    </tr>
+                  </table>
                 </span>
               </div>
 
@@ -247,6 +272,17 @@
                 </span>
               </div>
 
+              <div class="speed-limit text-center">
+                <span class="badge speed-slow">
+                  <table>
+                    <tr>
+                      <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
+                      <td><span><img src="turtle.png"></span></td>
+                    </tr>
+                  </table>
+                </span>
+              </div>
+
               <div class="boost-container">
                 <div class="boost-container-label">
                   <div class="boost-container-label-inner text-center">
@@ -277,8 +313,8 @@
               </div>
 
               <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
+                <a class="psicash-buy-psi btn btn-primary" href="#">
+                  <span data-i18n="psicash#ui-buypsi">Buy PsiCash</span> <img class="coin" src="psicash_coin.png">
                 </a>
               </div>
             </div><!-- #psicash-interface-enoughbalance -->
@@ -287,10 +323,23 @@
               <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
-                    <img class="coin" src="psicash_coin.png">
-                    <span class="psicash-balance"></span>
-                  </span>
-                </div>
+                  <img class="coin" src="psicash_coin.png">
+                  <span class="psicash-balance"></span>
+                </span>
+              </div>
+
+              <div class="speed-limit text-center">
+                <span class="badge speed-slow">
+                  <table>
+                    <tr>
+                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
+                      <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
+                      <td><span><img src="turtle.png"></span></td>
+                    </tr>
+                  </table>
+                </span>
+              </div>
+
               <div class="button-container">
                 <button type="button" class="btn btn-primary disabled" disabled>
                   <i class="icon-spinner2 icon-spin"></i>
@@ -308,10 +357,23 @@
               <div class="psicash-title-balance">
                 PsiCash
                 <span class="psicash-balance-coin">
-                    <img class="coin" src="psicash_coin.png">
-                    <span class="psicash-balance"></span>
-                  </span>
-                </div>
+                  <img class="coin" src="psicash_coin.png">
+                  <span class="psicash-balance"></span>
+                </span>
+              </div>
+
+              <div class="speed-limit text-center">
+                <span class="badge speed-fast">
+                  <table>
+                    <tr>
+                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
+                      <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
+                      <td><span><img src="rocket.png"></span></td>
+                    </tr>
+                  </table>
+                </span>
+              </div>
+
               <div class="button-container">
                 <button type="button" class="btn btn-success disabled" disabled>
                   <span class="speed-boost-time-remaining"></span>
