Use prominent "buy PsiCash" button when NSF

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -191,7 +191,6 @@
                 <span class="badge speed-slow">
                   <table>
                     <tr>
-                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
                       <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
                       <td><span><img src="turtle.png"></span></td>
                     </tr>
@@ -219,7 +218,6 @@
                 <span class="badge speed-slow">
                   <table>
                     <tr>
-                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
                       <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
                       <td><span><img src="turtle.png"></span></td>
                     </tr>
@@ -257,8 +255,8 @@
               </div><!-- .boost-container -->
 
               <div class="button-container">
-                <a class="psicash-buy-psi btn btn-small" data-i18n="psicash#ui-buymorepsi" href="#">
-                  Buy more PsiCash
+                <a class="psicash-buy-psi btn btn-primary" href="#">
+                  <span data-i18n="psicash#ui-buypsi">Buy PsiCash</span> <img class="coin" src="psicash_coin.png">
                 </a>
               </div>
             </div><!-- #psicash-interface-nsfbalance -->
@@ -332,7 +330,6 @@
                 <span class="badge speed-slow">
                   <table>
                     <tr>
-                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
                       <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
                       <td><span><img src="turtle.png"></span></td>
                     </tr>
@@ -366,7 +363,6 @@
                 <span class="badge speed-fast">
                   <table>
                     <tr>
-                      <!-- translator note about width; use hard breaks like <br> or wrap helpers like &#8203; or <wbr> -->
                       <td><span data-i18n="[html]psicash#psiphon-speed">Psiphon<br>Speed</span></td>
                       <td><span><img src="rocket.png"></span></td>
                     </tr>
