Hide the speed limit indicator if Speed Boost is not active and the baseline rate limit is above a certain threshold
This is prevent users in regions with a high base rate limit from seeing the turtle indicator (which doesn't really apply to them).

Fixes https://github.com/Psiphon-Inc/psiphon-issues/issues/706

fixup

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1575,6 +1575,14 @@
 
           <hr>
 
+          <form class="form-inline" id="debug-TrafficRateLimits">
+            <label>Notice:TrafficRateLimits</label>
+            <input type="text" placeholder="threshold is 655360" value="500000">
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
           <p>
             Simple notices resulting in modals or log lines:
           </p>
