--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1007,6 +1007,28 @@
                           </small>
                         </span>
                       </div>
+                      <p data-i18n="settings#expose-local-proxies-to-lan#help-text">
+                        If you have other devices on your network, such as a
+                        Smart TV or gaming console, you can allow them to use
+                        these HTTP and SOCKS proxies while Psiphon is connected.
+                        HINT: You should specify at least one of the port numbers
+                        above in order to use this feature.
+                      </p>
+                      <div class="checkbox-container">
+                        <div class="controls checkbox">
+                          <input type="checkbox" id="ExposeLocalProxiesToLAN"/>
+                          <label for="ExposeLocalProxiesToLAN">
+                            <span data-i18n="settings#expose-local-proxies-to-lan#enable-label">
+                              Allow other devices on your network to use the local Psiphon proxies
+                            </span>
+                          </label>
+                        </div>
+                      </div>
+                      <span class="help-block">
+                        <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
+                          (Doesn't work with L2TP/IPSec mode.)
+                        </small>
+                      </span>
                     </fieldset>
                   </form>
                 </div>
