Minor UI change, make text localizable.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1007,11 +1007,17 @@
                           </small>
                         </span>
                       </div>
+                    </fieldset>
+                  </form>
+                  <form class="vpn-incompatible">
+                    <fieldset>
                       <p data-i18n="settings#expose-local-proxies-to-lan#help-text">
                         If you have other devices on your network, such as a
                         Smart TV or gaming console, you can allow them to use
                         these HTTP and SOCKS proxies while Psiphon is connected.
-                        HINT: You should specify at least one of the port numbers
+                      </p>
+                      <p data-i18n="[html]settings#expose-local-proxies-to-lan#hint">
+                        <strong>HINT:</strong> You should specify at least one of the port numbers
                         above in order to use this feature.
                       </p>
                       <div class="checkbox-container">
