Minor code review changes.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1013,7 +1013,7 @@
                     <fieldset>
                       <p data-i18n="settings#expose-local-proxies-to-lan#help-text">
                         If you have other devices on your network, such as a
-                        Smart TV or gaming console, you can allow them to use
+                        smart TV or gaming console, you can allow them to use
                         these HTTP and SOCKS proxies while Psiphon is connected.
                       </p>
                       <p data-i18n="[html]settings#expose-local-proxies-to-lan#hint">
