Update text for HINT message.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1018,7 +1018,8 @@
                       </p>
                       <p data-i18n="[html]settings#expose-local-proxies-to-lan#hint">
                         <strong>HINT:</strong> You should specify at least one of the port numbers
-                        above in order to use this feature.
+                        above in order to use this feature. The addresses of the local proxies will
+                        be displayed in the logs.
                       </p>
                       <div class="checkbox-container">
                         <div class="controls checkbox">
