New server regions, updated translations.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -855,6 +855,12 @@
                                 Denmark
                               </a>
                             </li>
+                            <li data-region="EE">
+                              <a href="#" tabindex="-1" class="flag ee"
+                                 data-i18n="settings#egress-region#select-ee">
+                                Estonia
+                              </a>
+                            </li>
                             <li data-region="ES">
                               <a href="#" tabindex="-1" class="flag es"
                                  data-i18n="settings#egress-region#select-es">
@@ -925,6 +931,12 @@
                               <a href="#" tabindex="-1" class="flag kr"
                                  data-i18n="settings#egress-region#select-kr">
                                 Korea
+                              </a>
+                            </li>
+                            <li data-region="LV">
+                              <a href="#" tabindex="-1" class="flag lv"
+                                 data-i18n="settings#egress-region#select-lv">
+                                Latvia
                               </a>
                             </li>
                             <li data-region="MX">
@@ -1578,6 +1590,12 @@
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-EE" value="EE">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-EE">EE</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-ES" value="ES">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-ES">ES</label>
               </div>
@@ -1646,6 +1664,12 @@
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-KR" value="KR">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-KR">KR</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-LV" value="LV">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-LV">LV</label>
               </div>
             </div>
             <div class="checkbox-container">
