Fix Psiphon-Inc/psiphon-issues#752: If the temporary psipon-tunnel-core.exe file was inaccessible, the connection attempt would continue forever with no hope of succeeding. Now the connection is aborted and the user is shown a message with remediation instructions.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -2179,6 +2179,12 @@
               </form>
             </li>
             <li>
+              <form class="form-inline" id="debug-PsiphonUI-FileError" action="">
+                <label>Notice:PsiphonUI::FileError (modal)</label>
+                <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+              </form>
+            </li>
+            <li>
               <form class="form-inline" id="debug-SetProxyError" action="">
                 <label>Notice:SystemProxySettings::SetProxyError (modal)</label>
                 <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
