Add feedback button to error notice; log when shown

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -2368,6 +2368,12 @@
       </div>
     </div>
     <div class="modal-footer">
+      <button type="button" class="btn" data-tab-switch="#feedback-tab" data-dismiss="modal">
+        <span data-i18n="general#modal-feedback-button">
+          Send Feedback
+        </span>
+      </button>
+
       <button type="button" class="btn btn-primary" data-dismiss="modal">
         <span data-i18n="general#modal-close-button">
           Close
