de-emphasize feedback button in error modal
It looks too much like a first-class action, when it will generally not be the required by most users most of the time.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -2368,7 +2368,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn" data-tab-switch="#feedback-tab" data-dismiss="modal">
+      <button type="button" class="btn btn-small" data-tab-switch="#feedback-tab" data-dismiss="modal">
         <span data-i18n="general#modal-feedback-button">
           Send Feedback
         </span>
